--- a/web_flask/static/styles/3-header.css
+++ b/web_flask/static/styles/3-header.css
@@ -1,18 +1,9 @@
 header {
 	background-color: white;
+	background-image: url("../images/logo.png");
+	background-position: 20px;
+	background-repeat: no-repeat;
 	height: 70px;
 	width: 100%;
-	
 	border-bottom: 1px solid #CCCCCC;
-}
-
-#header_logo {
-	height: 100%;
-	width: 142px;
-
-	background-image: url("../images/logo.png");
-	background-repeat: no-repeat;
-	background-position: center;
-
-	margin-left: 20px;
 }
