--- a/web_flask/static/styles/6-filters.css
+++ b/web_flask/static/styles/6-filters.css
@@ -7,18 +7,58 @@
 	border-radius: 4px;
 }
 
-.locations {
-	display: inline;
-	vertical-align: middle;
-	float: left;
-	height: 100%;
-	width: 25%;
+.filters button {
+	font-size: 18px;
+	background-color: #FF5A5F;
+	color: #FFFFFF;
+	height: 48px;
+	width: 20%;
+	border: none;
+	border-radius: 4px;
+	float: right;
+	margin-top: 11px;
+	margin-right: 30px;
+	margin-bottom: 11px;
+}
 
-	line-height: 20px;
+.filters button:hover {
+	opacity: 90%;
+}
+
+.filters h2 {
+	font-size: 16px;
+	padding-left: 24px;
+	margin: 0px;
+}
+
+.filters h3, h4 {
+	margin-bottom: 5px;
+	padding-left: 30px;
+	color: #484848;
+}
+
+.filters h3 {
+	font-weight: 600;
+	margin-top: 16px;
+}
+
+.filters h4 {
+	font-size: 14px;
+	font-weight: 400;
+	margin-top: 5px;
+}
+
+.filters ul {
+	list-style-type: none;
+	padding: 0px;
+	padding-bottom: 20px;
+}
+
+.filters .locations {
 	border-right: 1px solid #DDDDDD;
 }
 
-.filter_amenities {
+.filters .locations, .filters .amenities {
 	display: inline;
 	vertical-align: middle;
 	height: 100%;
@@ -28,74 +68,21 @@
 	line-height: 20px;
 }
 
-.popover {
-	list-style-type: none;
-	display: none;
+.filters .locations:hover .popover,
+.filters .amenities:hover .popover {
+	display: inline-block;
+}
+
+.filters .popover {
 	background-color: #FAFAFA;
-	width: 100%;
-
-	margin-left: -1px;
-	margin-top: 8px;
-	padding: 25px 0px;
-
 	border: 1px solid #DDDDDD;
 	border-radius: 4px;
-}
-
-.locations:hover .popover {
-	display: inline-block;
-}
-
-.filter_amenities:hover .popover {
-	display: inline-block;
-}
-
-ul {
+	display: none;
 	list-style-type: none;
-	padding: 0px;
-	padding-bottom: 20px;
-}
-
-li {
-}	
-
-h2 {
-	font-size: 16px;
-	padding-left: 30px;
-	margin: 0px;
-}
-
-h3 {
-	font-weight: 600;
-	margin-top: 12px;
-	margin-bottom: 5px;	
-	padding-left: 45px;
-}
-
-h4 {
-	font-size: 14px;
-	font-weight: 400;
-	margin-top: 5px;
-	margin-bottom: 5px;
-	padding-left: 45px;
-}
-
-button {
-	color: #FFFFFF;
-	font-size: 18px;
-	
-	height: 48px;
-	width: 20%;
-	background-color: #FF5A5F;
-	border-style: none;
-	border-radius: 4px;
-
-	float: right;
-	margin-top: 11px;
-	margin-bottom: 11px;
-	margin-right: 30px;
-}
-
-button:hover {
-	opacity: 90%;
+	width: 100%;
+	margin-top: 4px;
+	margin-left: -1px;
+	padding: 25px 0px;
+	max-height: 300px;
+	overflow-y: auto;
 }
